2006-06-15 Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.addin.xml: Use the DataType element instead fof Class
	  to declare serializable types.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.addin.xml: Updated versions.
	* JavaBinding.mdp: Updated.

2006-04-21 Lluis Sanchez Gual <lluis@novell.com> 

	* JavaLanguageBinding.cs: Implement GetSupportedClrVersions.

2006-04-07  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* JavaBinding.addin.xml: renamed attribute in FileFilter Extension

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am:
	* JavaBinding.addin.xml: Updated references.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* JavaBinding.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* JavaBinding.addin.xml: Updated add-in versions.

2006-03-12  David Makovský (Yakeen) <yakeen@sannyas-on.net>

        * Java.glade: Marking some strings not to be translated. Not include balast in pot file.

2006-01-30 Lluis Sanchez Gual  <lluis@novell.com>   

	* Parser/Resolver.cs:
	* Parser/Parser.cs: Track changes in parser api.

2005-12-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* JavaLanguageBinding.cs: Implemented IDotNetLanguageBinding methods.
	* templates/*: Set the correct category and language name.

2005-11-15  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBindingCompilerServices.cs: Look for ikvmc.exe in the configured
	directory and in the bin subdirectory. Fixes bug #76700.

2005-11-14  Lluis Sanchez Gual  <lluis@novell.com>

	* templates/JavaConsoleApplicationProject.xpt.xml:
	* templates/JavaApplicationProject.xpt.xml: "Class" is not a valid
	project target. Changed to Exe.

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.addin.xml: Fixed incorrect class name.

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 

	* JavaBinding.addin.xml: Fixed addin header information.
	Use "id" attribuet instead of "name" to identify addins.
