@@ -5,17 +5,17 @@
        url         = "http://www.monodevelop.com"
        description = "Java Language Binding"
 	   category    = "Language bindings"
-       version     = "0.8">
+       version     = "0.9">
 
   <Runtime>
     <Import assembly = "JavaBinding.dll"/>
   </Runtime>
 
 	<Dependencies>
-	    <AddIn id="MonoDevelop.Core" version="0.10.0"/>
-	    <AddIn id="MonoDevelop.Core.Gui" version="0.10.0"/>
-	    <AddIn id="MonoDevelop.Projects" version="0.11.0"/>
-		<AddIn id="MonoDevelop.Ide" version="0.10.0"/>
+	    <AddIn id="MonoDevelop.Core" version="0.12.0"/>
+	    <AddIn id="MonoDevelop.Core.Gui" version="0.12.0"/>
+	    <AddIn id="MonoDevelop.Projects" version="0.12.0"/>
+		<AddIn id="MonoDevelop.Ide" version="0.12.0"/>
 	</Dependencies>
 	
   <Extension path = "/SharpDevelop/Workbench/FileFilter">
